# ocr_eval

./: .env.example  README.md  inspect_cord.py  main.py  pyproject.toml
docs/: plan.json  progress_and_plan.md
instructions/: Tung.md
notebooks/: docvqa.ipynb  funsd.ipynb  infographicvqa_explore.ipynb  ocr_bbox_demo.ipynb  ocr_demo.ipynb
src/ocr_eval/: __init__.py  cli.py  config.py  legacy_utils.py
src/ocr_eval/data/: loader.py
src/ocr_eval/engines/: base.py  openai.py  textract.py
src/ocr_eval/utils/: __init__.py  metrics.py  preview.py
